Rearranged Wizard Layout

--- a/src/com/lordofthejars/querydslplugin/messages.properties
+++ b/src/com/lordofthejars/querydslplugin/messages.properties
@@ -5,7 +5,7 @@ DatabaseUser_label = Username
 DatabasePassword_label = Password
 
 DriverLocation_label = Jar Driver Path
-Browser_button = Browse
+Browser_button = Jar Driver Path
 
 ErrorLoadingJar_error_msg = Fatal error loading jar file into classpath
 ErrorExportingMetadata_error_msg = Fatal error exporting metadata
